[project]
name = "brie-commit"
version = "1.1.0"
description = "A collection of cheesy pre-commit hooks."
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "sco1", email = "sco1.git@gmail.com"}
]

readme = "README.md"
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]

requires-python = ">=3.9"
dependencies = [
]

[project.urls]
Homepage = "https://github.com/sco1/"
Documentation = "https://github.com/sco1/brie-commit/blob/main/README.md"
Repository = "https://github.com/sco1/brie-commit.git"
Issues = "https://github.com/sco1/brie-commit/issues"
Changelog = "https://github.com/sco1/brie-commit/blob/main/CHANGELOG.md"

[project.scripts]
good2gouda = "brie_commit.gouda:main"

[tool.uv]
dev-dependencies = [
    "black~=25.0",
    "bump2version~=1.0",
    "flake8~=7.1",
    "flake8-annotations~=3.1",
    "isort~=6.0",
    "mypy~=1.14",
    "pre-commit~=4.0",
    "pytest~=8.3",
    "pytest-cov~=6.0",
    "pytest-randomly~=3.16",
    "ruff~=0.9",
    "tox~=4.23",
    "tox-uv~=1.17",
]

[tool.black]
line-length = 100

[tool.isort]
case_sensitive = true
known_first_party = "brie_commit,tests"
no_lines_before = "LOCALFOLDER"
order_by_type = false
profile = "black"

[tool.mypy]
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
